test(product): add unit and integration tests for product and inventory services